--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [15.x, 16.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        node-version: [15.x]
+        os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v1
     - name: Use Node ${{ matrix.node-version }}
