--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "eslint \"lib/**/*.js\" \"lib/*.js\" \"test/*.js\"",
     "test": "tap --no-coverage --no-esm test/*.js"
   },
-  "main": "./lib/index.js",
+  "main": "./index.js",
   "type": "module",
   "devDependencies": {
     "diff": "^5.0.0",
