--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@mojolicious/mojo",
+  "name": "@mojojs/core",
   "version": "0.0.1",
   "description": "Real-time web framework",
   "keywords": [
