--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": ">= 15"
   },
   "dependencies": {
+    "chalk": ">=4.1.1",
     "ejs": ">=3.1.6",
     "escape-string-regexp": ">=2.0.0",
     "lru-cache": ">=6.0.0",
