--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mojojs/mojo",
-  "version": "0.0.1",
+  "version": "1.0.0-alpha.0",
   "description": "Real-time web framework",
   "keywords": [
     "web",
