--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage-html": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' --coverage-report=html test/*.js"
   },
-  "main": "./index.js",
+  "main": "./lib/mojo.js",
   "type": "module",
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": "^0.1.2",
