--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "main": "./lib/mojo.js",
   "type": "module",
+  "bin": {
+    "mojo": "./bin/mojo.js"
+  },
   "devDependencies": {
     "@istanbuljs/esm-loader-hook": ">=0.1.2",
     "eslint": ">=7.22.0",
