--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "cookie": ">=0.4.1",
     "ejs": ">=3.1.6",
     "escape-string-regexp": ">=2.0.0",
+    "form-data": ">=2.3.3",
+    "formidable": ">=1.2.2",
     "lru-cache": ">=6.0.0",
     "nopt": ">=5.0.0",
     "stack-utils": ">=1.0.5",
