--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
   },
   "dependencies": {
     "chalk": ">=4.1.1",
+    "cheerio": "^1.0.0-rc.9",
     "cookie": ">=0.4.1",
     "ejs": ">=3.1.6",
     "escape-string-regexp": ">=2.0.0",
     "form-data": ">=2.3.3",
     "formidable": ">=1.2.2",
-    "jsdom": ">=16.5.3",
     "lru-cache": ">=6.0.0",
     "nopt": ">=5.0.0",
     "stack-utils": ">=1.0.5",
