--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "form-data": ">=2.3.3",
     "formidable": ">=1.2.2",
     "lru-cache": ">=6.0.0",
+    "mime-types": ">=2.1.30",
     "nopt": ">=5.0.0",
     "stack-utils": ">=1.0.5",
     "tap": ">=15.0.6",
