--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "dependencies": {
     "ajv": ">=6.12.6",
     "chalk": ">=4.1.1",
-    "cheerio": "^1.0.0-rc.9",
+    "cheerio": ">=1.0.0-rc.9",
     "cookie": ">=0.4.1",
     "ejs": ">=3.1.6",
     "escape-string-regexp": ">=2.0.0",
