--- a/package.json
+++ b/package.json
@@ -37,13 +37,13 @@
   },
   "dependencies": {
     "ajv": ">=6.12.6",
+    "busboy": ">=0.3.1",
     "chalk": ">=4.1.1",
     "cheerio": ">=1.0.0-rc.9",
     "cookie": ">=0.4.1",
     "ejs": ">=3.1.6",
     "escape-string-regexp": ">=2.0.0",
     "form-data": ">=2.3.3",
-    "formidable": ">=1.2.2",
     "lru-cache": ">=6.0.0",
     "mime-types": ">=2.1.30",
     "nopt": ">=5.0.0",
