--- a/package.json
+++ b/package.json
@@ -36,20 +36,20 @@
     "node": ">= 15"
   },
   "dependencies": {
-    "ajv": ">=6.12.6",
-    "busboy": ">=0.3.1",
-    "chalk": ">=4.1.1",
-    "cheerio": ">=1.0.0-rc.9",
-    "cookie": ">=0.4.1",
-    "ejs": ">=3.1.6",
-    "escape-string-regexp": ">=2.0.0",
-    "form-data": ">=2.3.3",
-    "lru-cache": ">=6.0.0",
-    "mime-types": ">=2.1.30",
-    "nopt": ">=5.0.0",
-    "stack-utils": ">=1.0.5",
-    "tap": ">=15.0.6",
-    "tough-cookie": ">=4.0.0",
-    "ws": ">=7.4.5"
+    "ajv": "^8.5.0",
+    "busboy": "^0.3.1",
+    "chalk": "^4.1.1",
+    "cheerio": "^1.0.0-rc.9",
+    "cookie": "^0.4.1",
+    "ejs": "^3.1.6",
+    "escape-string-regexp": "^5.0.0",
+    "form-data": "^4.0.0",
+    "lru-cache": "^6.0.0",
+    "mime-types": "^2.1.30",
+    "nopt": "^5.0.0",
+    "stack-utils": "^2.0.3",
+    "tap": "^15.0.6",
+    "tough-cookie": "^4.0.0",
+    "ws": "^7.4.5"
   }
 }
