--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/cheerio": "^0.22.29",
     "@types/cookie": "^0.4.0",
     "@types/lru-cache": "^5.1.0",
+    "@types/ejs": "^3.0.6",
     "@types/node": "^15.12.2",
     "@types/stack-utils": "^2.0.0",
     "@types/tap": "^15.0.3",
