Add a types field to package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "tap --no-coverage test/*.js"
   },
   "exports": "./lib/mojo.js",
+  "types": "./lib/mojo.d.ts",
   "type": "module",
   "files": [
     "bin/",
