Autofixable import sort order with groups

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:watch": "npx tsc --watch",
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage-html": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' --coverage-report=html test/*.js",
-    "lint": "eslint",
+    "lint": "eslint \"src/**/*.js\" \"src/*.js\" \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
     "prepublishOnly": "npm run build",
     "test": "tap --no-coverage test/*.js"
   },
