--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,7 @@
     "plugin:@typescript-eslint/recommended",
     "standard-with-typescript"
   ],
+  "plugins": ["import"],
   "parserOptions": {
     "project": "./tsconfig.eslint.json"
   },
@@ -24,6 +25,23 @@
       }
     ],
     "object-curly-spacing": "off",
+    "import/order": [
+      "error",
+      {
+        "groups": [
+            "type",
+            "builtin",
+            ["sibling", "parent"],
+            "index", 
+            "object"
+        ],
+        "newlines-between": "always",
+        "alphabetize": {
+          "order": "asc",
+          "caseInsensitive": true
+        }
+      }
+    ],
     "@typescript-eslint/consistent-type-imports": [
       "error",
       {
@@ -46,5 +64,6 @@
         }
       }
     ]
+
   }
 }
