--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "homepage": "https://mojojs.org",
   "scripts": {
     "build": "npx tsc",
-    "build:lint": "npm run build && eslint \"src/**/*.js\" \"src/*.js\" \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
+    "build:lint": "npm run build && npm run lint",
     "build:test": "npm run build && npm test",
     "build:watch": "npx tsc --watch",
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage-html": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' --coverage-report=html test/*.js",
-    "lint": "eslint",
+    "lint": "eslint \"src/**/*.js\" \"src/*.js\" \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
+    "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "test": "tap --no-coverage test/*.js"
   },
