--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/stack-utils": "^2.0.0",
     "@types/tap": "^15.0.3",
     "@types/tough-cookie": "^4.0.0",
+    "@types/ws": "^7.4.5",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "eslint": "^7.28.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
