--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "ESNext",
       "DOM"
     ],
-    "target": "esnext",
+    "target": "ES2020",
     "declaration": true,
     "incremental": true,
     "moduleResolution": "node",
