--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "DOM"
     ],
     "target": "ES2020",
+    "module": "ES2020",
     "declaration": true,
     "incremental": true,
     "moduleResolution": "node",
