Add publish script again

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lint": "eslint \"src/**/*.js\" \"src/*.js\" \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
+    "publish:patch": "npm version patch; npm publish",
     "test": "tap --no-coverage test/*.js"
   },
   "exports": "./lib/core.js",
