Port mime.js to TypeScript

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/cookie": "^0.4.0",
     "@types/ejs": "^3.0.6",
     "@types/lru-cache": "^5.1.0",
+    "@types/mime-types": "^2.1.0",
     "@types/node": "^15.12.2",
     "@types/nopt": "^3.0.29",
     "@types/stack-utils": "^2.0.0",
