--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lint": "eslint \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
-    "publish:patch": "npm version patch; npm publish",
+    "publish:minor": "npm version minor && npm publish",
+    "publish:patch": "npm version patch && npm publish",
     "test": "tap --no-coverage test/*.js"
   },
   "exports": "./lib/core.js",
