--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "homepage": "https://mojojs.org",
   "scripts": {
     "bench": "npx concurrently -k -s first \"NODE_ENV=production node benchmarks/hello/hello-mojo.js server\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000\"",
-    "build": "npx tsc",
+    "build": "npx tsc && npx tsc --project tsconfig.test.json",
     "build:bench": "npm run build && npm run bench",
     "build:clean": "npm run clean && npm run build",
     "build:coverage": "npm run build && npm run coverage",
     "build:lint": "npm run build && npm run lint",
     "build:test": "npm run build && npm test",
     "build:watch": "npx tsc --watch",
-    "clean": "rm -r lib",
+    "clean": "rm -r lib; rm -r test/support/ts-app/lib",
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage:ci": "npm run coverage -- --no-check-coverage && tap --no-check-coverage --coverage-report=text-lcov > .lcov.info",
     "lint": "eslint \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
