Only use rm once

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build:lint": "npm run build && npm run lint",
     "build:test": "npm run build && npm test",
     "build:watch": "npx tsc --watch",
-    "clean": "rm -r lib; rm -r test/support/ts-app/lib",
+    "clean": "rm -r lib test/support/ts-app/lib",
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage:ci": "npm run coverage -- --no-check-coverage && tap --no-check-coverage --coverage-report=text-lcov > .lcov.info",
     "lint": "eslint \"test/*.js\" \"src/**/*.ts\" \"src/*.ts\"",
