--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,7 @@
     "incremental": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "noErrorTruncation": true,
     "strict": true,
-    "noErrorTruncation": true
   }
 }
