--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "node": ">= 16"
   },
   "dependencies": {
+    "@mojojs/path": "^1.0.0",
     "ajv": "^8.5.0",
     "busboy": "^0.3.1",
     "chalk": "^4.1.1",
