--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
     "autocannon": "^7.3.0",
     "concurrently": "^6.2.0",
     "eslint": "^7.28.0",
-    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
+    "prettier": "2.3.2",
     "typescript": "^=4.3.2"
   },
   "engines": {
