--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,4 @@
 {
   "extends": "./tsconfig.base.json",
-  "include": [
-    "benchmarks/**/*",
-    "bin/**/*",
-    "examples/**/*",
-    "src/**/*",
-    "test/**/*"
-  ]
+  "include": ["benchmarks/**/*", "bin/**/*", "examples/**/*", "src/**/*", "test/**/*"]
 }
