--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   "homepage": "https://mojojs.org",
   "scripts": {
     "bench": "npx concurrently -k -s first \"NODE_ENV=production node benchmarks/hello/hello-mojo.js server\" \"npx autocannon -c 100 -d 5 -p 10 localhost:3000\"",
-    "build": "npx tsc --build ./ ./test/support/ts-app",
+    "build": "npx tsc --build ./ ./test/support/ts/full-app",
     "build:bench": "npm run build && npm run bench",
     "build:clean": "npm run clean && npm run build",
     "build:coverage": "npm run build && npm run coverage",
     "build:lint": "npm run build && npm run lint",
     "build:test": "npm run build && npm test",
     "build:watch": "npm run build -- --watch",
-    "clean": "rm -r tsconfig.tsbuildinfo test/support/ts-app/tsconfig.tsbuildinfo lib test/support/ts-app/lib",
+    "clean": "rm -r tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
     "coverage": "tap --node-arg='--no-warnings' --node-arg='--experimental-loader' --node-arg='@istanbuljs/esm-loader-hook' test/*.js",
     "coverage:ci": "npm run coverage -- --no-check-coverage && tap --no-check-coverage --coverage-report=text-lcov > .lcov.info",
-    "lint": "eslint \"test/*.js\" \"test/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
+    "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "publish:major": "npm version major && npm publish",
