--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/cheerio": "^0.22.29",
     "@types/cookie": "^0.4.0",
     "@types/ejs": "^3.0.6",
+    "@types/js-yaml": "^4.0.3",
     "@types/lru-cache": "^5.1.0",
     "@types/mime-types": "^2.1.0",
     "@types/node": "^16.0.0",
@@ -85,6 +86,7 @@
     "ejs": "^3.1.6",
     "escape-string-regexp": "^5.0.0",
     "form-data": "^4.0.0",
+    "js-yaml": "^4.1.0",
     "lru-cache": "^6.0.0",
     "mime-types": "^2.1.30",
     "nopt": "^5.0.0",
