--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,20 +7,20 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [16.x]
+        node-version: [16.x, 17.x]
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: npm install
-      run: npm i
-    - name: npm run build
-      run: npm run build
-    - name: npm run lint
-      run: npm run lint
-      if: matrix.os == 'ubuntu-latest'
-    - name: npm test
-      run: npm test
+      - uses: actions/checkout@v1
+      - name: Use Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install
+        run: npm i
+      - name: npm run build
+        run: npm run build
+      - name: npm run lint
+        run: npm run lint
+        if: matrix.os == 'ubuntu-latest'
+      - name: npm test
+        run: npm test
