--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
     "lib": ["ESNext", "DOM"],
     "target": "ES2020",
     "module": "ES2020",
+    "sourceMap": true,
     "declaration": true,
     "incremental": true,
     "moduleResolution": "node",
