--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.5.0",
+    "prettier": "^2.5.0",
     "tap": "^15.1.5",
     "typescript": "^=4.3.2"
   },
@@ -77,7 +77,7 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@mojojs/dom": "^0.2.0",
+    "@mojojs/dom": "^0.4.0",
     "@mojojs/path": "^1.1.2",
     "ajv": "^8.5.0",
     "busboy": "^0.3.1",
