--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "mojo": "./bin/mojo.js"
   },
   "devDependencies": {
-    "@istanbuljs/esm-loader-hook": "^=0.1.2",
+    "@istanbuljs/esm-loader-hook": "^0.1.2",
     "@types/busboy": "^0.3.1",
     "@types/ejs": "^3.0.6",
     "@types/js-yaml": "^4.0.3",
@@ -71,7 +71,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.5.0",
     "tap": "^15.1.5",
-    "typescript": "^=4.3.2"
+    "typescript": "^4.3.2"
   },
   "engines": {
     "node": ">= 16"
