--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
