--- a/package.json
+++ b/package.json
@@ -74,9 +74,10 @@
     "node": ">= 16"
   },
   "dependencies": {
-    "@mojojs/dom": "^1.2.0",
+    "@mojojs/dom": "^1.4.0",
     "@mojojs/path": "^1.4.0",
-    "@mojojs/template": "^2.0.0",
+    "@mojojs/template": "^2.1.0",
+    "@mojojs/util": "^1.0.0",
     "ajv": "^8.5.0",
     "busboy": "^1.0.0",
     "chalk": "^5.0.0",
