--- a/package.json
+++ b/package.json
@@ -26,20 +26,18 @@
     "build": "npx tsc --build ./ ./test/support/ts/full-app",
     "build:bench": "npm run build && npm run bench",
     "build:clean": "npm run clean && npm run build",
-    "build:coverage": "npm run build && npm run coverage",
     "build:lint": "npm run build && npm run lint",
     "build:node": "npm run build && node",
     "build:test": "npm run build && npm test",
     "build:watch": "npm run build -- --watch",
     "clean": "rm -rf tsconfig.tsbuildinfo test/support/ts/full-app/tsconfig.tsbuildinfo lib test/support/ts/full-app/lib",
-    "coverage": "c8 tap --no-coverage test/*.js",
-    "coverage:ci": "c8 --reporter lcovonly tap --no-coverage test/*.js",
+    "coverage:ci": "c8 --reporter lcovonly tap test/*.js",
     "lint": "eslint \"test/*.js\" \"test/support/js/**/*.js\" \"test/support/ts/**/src/**/*.ts\" \"src/**/*.ts\" \"src/*.ts\"",
     "lint:fix": "npm run lint -- --fix",
     "prepublishOnly": "npm run build",
     "publish:minor": "npm version minor && npm publish",
     "publish:patch": "npm version patch && npm publish",
-    "test": "tap --no-coverage test/*.js"
+    "test": "tap test/*.js"
   },
   "exports": "./lib/core.js",
   "types": "./lib/core.d.ts",
@@ -73,7 +71,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.0",
     "prettier": "^3.0.0",
-    "tap": "^16.3.0",
+    "tap": "^18.0.0",
     "typescript": "^5.2.0"
   },
   "engines": {
